# FinSight

./: .gitignore  README.md  ai_test.py  finsight.db  pyproject.toml  run.py
config/: banks.yaml  gmail_config.yaml
src/finsight/: cli.py  cli.py.bak  config.py  database.py  gmail_sync.py  models.py  models.py.bak  parsers.py  utils.py
tests/: test_ai_categorization.py
